--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@ function validation( ){
 var name=document.myform.password.value;
 var password=document.myform.eid.value;
 var phno=document.myform.phno.value;
-var addr=document.myform.addr.value;
+var addr=document.myform.addr.value;/* modified code*/
 if(name==null ||  name==" "){
  alert("Name is not blank");
 return false;
