--- a/registration.html
+++ b/registration.html
@@ -29,7 +29,7 @@ return false;
 }
 </script>
 <center><h1> Form</h1>
-<form name="my form" method="post" onsubmit="return validateform()">
+<form name="my form" method="post" onsubmit="return validateform()">/*modified code*/
 Name:<input type="text" name="name"><br><br>
 Gender: <br> Male<input type="radio" name=" " value=" ">
 Female<input type="radio" name=" " value=" "<br><br>
